# time_series_indexing

./: .gitignore  CMakeLists.txt  README.md  TODO  header.hpp  queries_maker.cpp  querying.cpp  serialize.cpp  test_querying.cpp  test_serialize.cpp
analysis/: README.md  indexes_analysis.py  run_all_queries.sh
data/: test.txt
include/: TimeSeries.hpp  header.hpp
src/: Baseline.hpp  Index1.hpp  TimeSeries.cpp  build_index.cpp  build_query_sets.cpp  queries_maker.cpp  querying.cpp  run_queries.cpp  serialize.cpp  services.cpp  test_baseline.cpp  test_common.hpp  test_index1.cpp  test_querying.cpp  test_serialize.cpp
test/: test_baseline.cpp  test_common.hpp  topk_cases_1.txt
test_cases/: dataset_1.txt  range_cases_1.txt  test_index1.cpp
